Setting up Structure Add Entities Add Docker Compose for Postgres Add Readme

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=haiilo-supermarket-checkout
+# Docker Compose Integration
+spring.docker.compose.enabled=true
+spring.docker.compose.lifecycle-management=start_and_stop
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.docker.compose.file=compose.yaml
