--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,15 @@
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16-alpine'
+    container_name: supermarket-db
     environment:
-      - 'POSTGRES_DB=mydatabase'
+      - 'POSTGRES_DB=supermarket'
       - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_USER=user'
     ports:
-      - '5432'
+      - '5433:5432' # Host-Port 5433, Container-Port 5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d supermarket"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
