--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.docker.compose.lifecycle-management=start_and_stop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.docker.compose.file=compose.yaml
+spring.docker.compose.file=backend/compose.yaml
